[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.48.0"
rusoto_rekognition = "0.48.0"
tokio = { version = "1", features = ["full"] }
anyhow = "*"
rusqlite = "*"