[package]
name = "data_accumu_actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
rand = "*"
dotenvy = "*"
sqlx = { version = "0.7.2", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "migrate",
] }

tokio = { version = "1.26.0", features = ["full"] }

anyhow = "1.0.70"