[package]
name = "jphacks"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.30.0"
shuttle-runtime = "0.30.0"
shuttle-secrets = "*"
serde = "1.0.148"
shuttle-shared-db = { version = "0.30.0", features = ["postgres"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = "1.26.0"


env_logger = "0.10.0"
log = "0.4.17"

serde_json = "1.0.93"
rand = "*"
dotenvy = "*"

reqwest = { version = "0.11", features = ["json"] }

anyhow = "1.0.70"
async-trait = "*"

rusoto_core = "0.48.0"
rusoto_rekognition = "0.48.0"