[package]
name = "sb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.26.0", features = ["full"] }
anyhow = "1.0.70"
serde = { version = "1.0.130", features = ["derive"] }

aws-config = "*"
aws-sdk-s3 = "*"
aws-sdk-rekognition = "0.34.0"
tracing = "0.1.37"